- Add Schema.org microdata to products for SEO, props @aristath!
- Add "from" price label to listings of multiple variation products
- Add cart message even when its empty
- Many many php notice fixes
- Fix major issues with new sites and coupons
- Fix coupons with a number as the code
- Fix rewrite flushing when changing store slugs
- Fix a stripslashes issue with email settings

2.6.2 - 7/13/2012 - Aaron Edwards/Arnold Bailey
----------------------------------------------------------------------
- Added per shipment handling charge to USPS, one for domestic and one for international shipping.
- Add Argentina and Brazil to PayPal gateway countries
- Add SKU's to new order emails
- Fix issue with category dropdown widget displaying all products
- Fix some potential problems with new installs and the CubePoints gateway

2.6.1 - 7/13/2012 - Aaron Edwards/Arnold Bailey
----------------------------------------------------------------------
- Display Shipping Option and Shipping Sub Option next to shipping cost on Order Manage Page.
- Added shipping method to the SHIPPINGINFO in email. If mp_shipping_info['method'] not yet set from actual shipping, displays the customer's choice.
- Show Shortcodes and importers tabs in listing only mode
- Major bugfix to gateway plugins settings filters
- Fix stripslashes issue with manual payments gateway
- Fix email filtering for manual payments gateway
- Change order of 'mp_new_order' hook
- Add some more filters for WPML compatibility
- Verify product_ids before adding to cart
- Fix Egypt Pounds currency symbol
- Fix missing labels for custom styles in Network settings

2.6.0 - 6/6/2012 - Aaron Edwards/Paul Menard
----------------------------------------------------------------------
- Added support for per Product and variation custom fields for personalization
- Allow shortcodes to work in custom page messages