@@ -15,6 +15,7 @@ Change Log:
 - Fix coupons with a number as the code
 - Fix rewrite flushing when changing store slugs
 - Fix a stripslashes issue with email settings
+- Fix unchecking of personalization checkboxes
 
 2.6.2 - 7/13/2012 - Aaron Edwards/Arnold Bailey
 ----------------------------------------------------------------------
